<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/liMain"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_wt"
        android:id="@+id/editWeight"
        android:inputType="number"
        android:textColor="@color/purple_700"
        android:background="#F9F8ED"
        android:layout_marginTop="20dp"

        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/purple_700"
        android:background="#F9F8ED"
        android:hint="@string/hint_htF"
        android:id="@+id/editHeightFt"
        android:layout_marginTop="20dp"

        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/purple_700"
        android:background="#F9F8ED"
        android:hint="@string/hint_htI"
        android:id="@+id/editHeightIn"
        android:layout_marginTop="20dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_calculate"
        android:layout_marginTop="20dp"
        android:id="@+id/btnCalculate"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_result"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/purple_700"
        android:background="#F9F8ED"
        android:id="@+id/txtResult"/>


</LinearLayout>